# qactionkit

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: action-extension-spec.md
examples/: CMakeLists.txt
examples/mainwindow/: CMakeLists.txt  main.cpp  mainwindow-actions.xml  mainwindow.cpp  mainwindow.h  plugin-actions.xml
examples/quick/: CMakeLists.txt  actions.qml  main.cpp  main.qml
examples/shared/: core-actions.xml
src/: CMakeLists.txt  QActionKitConfig.cmake.in  QActionKitMacros.cmake
src/core/: CMakeLists.txt  action.cpp  action.h  action_p.h  actioncatalogmodel.cpp  actioncatalogmodel.h  actioncontext.cpp  actioncontext.h  actioncontext_p.h  actionextension.cpp  actionextension.h  actionextension_p.h  actionfamily.cpp  actionfamily.h  actionfamily_p.h  actionicon.cpp  actionicon.h  actionlayoutsmodel.cpp  actionlayoutsmodel.h  actionregistry.cpp  actionregistry.h  actionregistry_p.h  actionscope.cpp  actionscope.h  actionscope_p.h  qakglobal.cpp  qakglobal.h  qakglobal_p.h
src/quick/: CMakeLists.txt  abstractquickmenuactioninstantiator.cpp  abstractquickmenuactioninstantiator_p.h  abstractquickmenuactioninstantiator_p_p.h  actioniconimageprovider.cpp  actioniconimageprovider.h  actioniconimageprovider_p.h  qakquickglobal.h  qakwidgetsglobal.h  quickactioncollection.cpp  quickactioncollection_p.h  quickactioncollection_p_p.h  quickactioncontext.cpp  quickactioncontext.h  quickactioncontext_p.h  quickactioninstantiator.cpp  quickactioninstantiator_p.h  quickactioninstantiator_p_p.h  quickactioninstantiatorattachedtype.cpp  quickactioninstantiatorattachedtype_p.h  quickactioninstantiatorattachedtype_p_p.h  quickactionitem.cpp  quickactionitem_p.h  quickactionitem_p_p.h  quickmenuactioninstantiator.cpp  quickmenuactioninstantiator_p.h  quickmenubaractioninstantiator.cpp  quickmenubaractioninstantiator_p.h
src/tools/: CMakeLists.txt
src/tools/aec/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  parser.cpp  parser.h  sample.cpp
src/widgets/: CMakeLists.txt  qakwidgetsglobal.h  widgetactioncontext.cpp  widgetactioncontext.h
src/widgets/settings/: keymapsettingswidget.cpp  keymapsettingswidget.h  layoutssettingswidget.cpp  layoutssettingswidget.h
tests/auto/: CMakeLists.txt
tests/auto/core/: CMakeLists.txt
tests/auto/core/actionfamily/: CMakeLists.txt  config.json  main.cpp
tests/auto/core/actionicon/: CMakeLists.txt  main.cpp
tests/auto/core/actionregistry/: CMakeLists.txt  main.cpp
tests/auto/tools/: CMakeLists.txt
tests/auto/tools/aec/: CMakeLists.txt  base.xml  main.cpp  res.qrc
